# databend-sqlalchemy

./: Makefile  Pipfile  README.md  README.rst  __init__.py  connector.py  entrypoints.cfg  errors.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml  test.yml
cc_superset/: engine.py
databend_sqlalchemy/: __init__.py  base.py  connector.py  databend_dialect.py  dml.py  entry_points.py  errors.py  provision.py  requirements.py  test.py  types.py
tests/: conftest.py  test_copy_into.py  test_merge.py  test_sqlalchemy.py  test_table_options.py
tests/integration/: conftest.py  test_sqlalchemy_integration.py
tests/unit/: conftest.py  test_databend_dialect.py
