[metadata]
name = databend_sqlalchemy
version = attr: databend_sqlalchemy.VERSION
description = Sqlalchemy adapter for Databend
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/datafuselabs/databend-sqlalchemy
author = Databend Cloud
author_email = hanshanjie@datafuselabs.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/datafuselabs/databend-sqlalchemy

[options]
packages = find:
install_requires =
    databend__driver>=0.12.1
    sqlalchemy>1.3.21
python_requires = >=3.7
package_dir =
    = .

[options.packages.find]
where = .

[options.entry_points]
sqlalchemy.dialects =
    databend = databend_sqlalchemy.databend_dialect:DatabendDialect
superset.db_engine_specs =
    databend = databend_sqlalchemy.cc_superset.engine:DatabendEngineSpec

[options.extras_require]
dev =
    devtools==0.7.0
    mock==4.0.3
    pre-commit==2.15.0
    pytest==6.2.5
    pytest-cov==3.0.0
    sqlalchemy-stubs==0.4

superset = apache_superset>=1.4.1

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "
