[metadata]
name = databend_sqlalchemy
version = attr: databend_sqlalchemy.VERSION
description = Sqlalchemy adapter for Databend
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/databendlabs/databend-sqlalchemy
author = Databend Cloud
author_email = hanshanjie@databend.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Tracker = https://github.com/databendlabs/databend-sqlalchemy

[options]
packages = find:
install_requires =
    databend-driver>=0.26.2
    sqlalchemy>=1.4
python_requires = >=3.8
package_dir =
    = .

[options.packages.find]
where = .

[options.entry_points]
sqlalchemy.dialects =
    databend = databend_sqlalchemy.databend_dialect:DatabendDialect
    databend.databend = databend_sqlalchemy.databend_dialect:DatabendDialect

[options.extras_require]
dev =
    devtools==0.7.0
    mock==4.0.3
    pre-commit==2.15.0
    pytest==8.1.1
    pytest-cov==3.0.0
    pytest-xdist==3.5.0
    sqlalchemy-stubs==0.4

superset = apache_superset>=1.4.1

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "

[tool:pytest]
addopts= --tb native -n1 -v -r fxX --maxfail=25 -p no:warnings
python_files=tests/*test_*.py
# python_functions=test_round_trip_same_named_column
# log_level=DEBUG

[sqla_testing]
requirement_cls=databend_sqlalchemy.requirements:Requirements
profile_file = .profiles.txt

[db]
default=databend://databend:databend@localhost:8000/default?sslmode=disable
